//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_BLOQUEO_H
#define PRACTICA1EDD_BLOQUEO_H


class Bloqueo {
};


#endif //PRACTICA1EDD_BLOQUEO_H