//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_DOBLELINEA_H
#define PRACTICA1EDD_DOBLELINEA_H


class DobleLinea {
};


#endif //PRACTICA1EDD_DOBLELINEA_H