//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_LLAVESECRETA_H
#define PRACTICA1EDD_LLAVESECRETA_H


class LlaveSecreta {
};


#endif //PRACTICA1EDD_LLAVESECRETA_H