//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_PASE_H
#define PRACTICA1EDD_PASE_H


class Pase {
};


#endif //PRACTICA1EDD_PASE_H