//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_POWERUP_H
#define PRACTICA1EDD_POWERUP_H
#include <string>


class PowerUp {
protected:
    static const std::string simbolos[];
private:
    std::string simboloTablero;
public:
};



#endif //PRACTICA1EDD_POWERUP_H