//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_TRAMPASECRETA_H
#define PRACTICA1EDD_TRAMPASECRETA_H


class TrampaSecreta {
};


#endif //PRACTICA1EDD_TRAMPASECRETA_H