//
// Created by rafael-cayax on 23/8/25.
//

#ifndef PRACTICA1EDD_UNIONAFUTURO_H
#define PRACTICA1EDD_UNIONAFUTURO_H


class UnionAFuturo {
};


#endif //PRACTICA1EDD_UNIONAFUTURO_H